// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimedToastNotification persisted and paused renders properly 1`] = `
<div
  class="toast-notifications-list-pf"
>
  <div
    class="alert toast-pf alert-success alert-dismissable"
  >
    <button
      aria-hidden="true"
      class="close close-default"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-close"
      />
    </button>
    <span
      aria-hidden="true"
      class="pficon pficon-ok"
    />
    <span>
      Success Will Robinson!
    </span>
  </div>
</div>
`;

exports[`ToastNotification renders properly 1`] = `
<div
  class="toast-notifications-list-pf"
>
  <div
    class="alert toast-pf alert-danger alert-dismissable"
  >
    <button
      aria-hidden="true"
      class="close close-default"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-close"
      />
    </button>
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o"
    />
    <span>
      Success Will Robinson!
    </span>
  </div>
</div>
`;
